--- a/support/static/ngTemplates/app.support.html
+++ b/support/static/ngTemplates/app.support.html
@@ -15,7 +15,7 @@
           <div class="container-fluid"style="border:1px solid #474444">
           <div class="row" style="margin-top:10px;margin-bottom:10px;">
             <div class="col-md-9">
-              <span>My Users</span><br>
+              <span><b>My Users</b></span><br>
             </div>
             <div class="col-md-2">
               <button class="btn btn-default" style="background-color:var(--themeMain);color:white;">{{myUsers.length}}</button>
@@ -57,7 +57,7 @@
           <div class="container-fluid"style="border:1px solid #474444">
           <div class="row" style="margin-top:10px;margin-bottom:10px;">
             <div class="col-md-9">
-              <span>New Users</span><br>
+              <span><b>New Users</b></span><br>
             </div>
             <div class="col-md-2">
               <button class="btn btn-default" style="background-color:var(--themeMain);color:white;">{{newUsers.length}}</button>
