--- a/static_shared/ngTemplates/chatBox.html
+++ b/static_shared/ngTemplates/chatBox.html
@@ -3,23 +3,26 @@
     <div class="container-fluid" style="padding:0px;border-bottom:1px solid #eeeeee;height:115px;">
       <div class="row" style="padding:0px;">
         <div class="col-md-12">
-          <div class="col-md-4" style="padding:0px">
+          <div class="col-md-3" style="padding:0px">
             <div class="btn btn-primary btn-sm btn-block" style="border-radius:0px !important;" type="button" name="button" ng-click="knowledgeBase(data.companyPk)"><i class="fa fa-book" style="font-size:35px;" aria-hidden="true"></i>
             </div>
           </div>
-          <div class="col-md-4" style="padding:0px">
-            <div class="btn btn-warning btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Transfer Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatTransfer(data.uid,data.chatThreadPk)"
+          <div class="col-md-3" style="padding:0px">
+            <div class="btn btn-warning btn-sm btn-block" type="button" style="border-radius:0px !important;padding:5px 0px" name="button" mwl-confirm title="Transfer Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatTransfer(data.uid,data.chatThreadPk)"
               confirm-button-type="default" cancel-button-type="default"><i style="font-size:30px" class="fa fa-user-o" aria-hidden="true"></i>
               <i style="font-size:16px" class="fa fa-exchange" aria-hidden="true"></i>
               <i style="font-size:35px" class="fa fa-user" aria-hidden="true"></i>
             </div>
           </div>
-          <div class="col-md-4" style="padding:0px">
+          <div class="col-md-3" style="padding:0px">
             <div class="btn btn-danger btn-sm btn-block" type="button" style="border-radius:0px !important;" name="button" mwl-confirm title="Close Chat" message="Are you sure?" data-placement="bottom" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="chatClose(index,data.uid,data.chatThreadPk);closed=true"
               confirm-button-type="default" cancel-button-type="default" ng-hide="closed">
               <img style="width:35px;border-radius:10px" src="/static/images/close_chat.png">
             </div>
             <span ng-if="closed" style="font-size:18px;color:red">Chat Closed</span>
+          </div>
+          <div class="col-md-3" style="padding:0px;font-size:33px;text-align:center;background-color:green">
+            <i class="fa fa-pencil " style="cursor:pointer;text-align:center;color:white" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
           </div>
         </div>
       </div>
@@ -37,9 +40,9 @@
           <div class="row">
             <i class="fa fa-times pull-right " aria-hidden="true" style="cursor:pointer; font-size:20px; padding-right:10px;" ng-click="closeChatBox(index)"></i>
           </div>
-          <div class="row" style="padding-top:10px;">
+          <!-- <div class="row" style="padding-top:10px;">
             <i class="fa fa-pencil fa-lg  pull-right" style="cursor:pointer; padding-right:10px;" aria-hidden="true" ng-click="editUserDetails(data.uid)" title="Edit Details"></i>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
