--- a/support/static/ngTemplates/app.projects.service.view.html
+++ b/support/static/ngTemplates/app.projects.service.view.html
@@ -82,7 +82,10 @@
             </tbody>
           </table>
           <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-11">
+              <button type="button" class="btn btn-success pull-right" ng-click="send()"  style="margin-right:55px;" >Send For Approval</button>
+            </div>
+            <div class="col-md-1">
               <!-- <button type="button" class="btn btn-success pull-right"  style="margin-right:55px;"> -->
                 <a  class="btn btn-primary pull-right" style="cursor:pointer;margin-right:55px;" target="_blank" href="/api/support/slip/?project={{form.pk}}">Download</a>
               <!-- </button> -->
