--- a/support/static/ngTemplates/app.inventory.html
+++ b/support/static/ngTemplates/app.inventory.html
@@ -1,1 +1,20 @@
+<div class="shaddowed card bg-white" style="min-height:93vh;">
+  <breadcrumb></breadcrumb>
+  <div class="row">
+    <div class="col-md-8 col-md-offset-2 text-right">
+      <div class="container-fluid">
 
+
+        <div class="input-group">
+          <input type='text' ng-model='searchText' class="form-control" placeholder="Search a Product " ng-enter="enterFun()" />
+          <span class="input-group-addon" ng-click="refresh()" style="cursor:pointer; background-color:#fff;"><i class="fa fa-refresh"></i></span>
+          <span class="input-group-addon" ng-click="prev()" style="cursor:{{offset!=0?'pointer;background-color:#fff;':'not-allowed;background-color:#eee'}}"><i class="fa fa-arrow-left"></i>Prev</span>
+          <span class="input-group-addon" ng-click="next()" style="cursor:pointer; background-color:#fff;">Next <i class="fa fa-arrow-right"></i></span>
+          <span class="input-group-addon" ng-click="new()" style="cursor:pointer; background-color:#fff;">New <i class="fa fa-plus"></i></span>
+          <!-- <span tclass="input-group-addon" ng-click="topButtonsClick('New')"><i class="fa fa-plus"></i> New </button> -->
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
