--- a/support/static/ngTemplates/app.projects.service.item.html
+++ b/support/static/ngTemplates/app.projects.service.item.html
@@ -1,17 +1,17 @@
-<div class="col-md-3" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.service.item">
-  <div class="container-fluid card" style="padding-bottom:10px; padding-top:10px;">
-    <div class="row" style="border-bottom: 1px solid #dedede;">
+<div class="col-md-4" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.service.item">
+  <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);">
+    <div class="row text-center" style="border-bottom: 1px solid #dedede;background-color:rgb(51, 122, 183);color:white;height:6vh;">
       <div class="col-md-12" style="position:relative;display:block;">
         <div class="row" style="padding-left:10px;">
           <h3>{{data.title}}</h3>
         </div>
       </div>
     </div>
-    <div class="row container-fluid" style="padding-top:20px;height:70px;">
+    <div class="row container-fluid" style="padding-top:20px;height:12vh;">
       <div class="col-md-10" style="z-index: 1;">
-        <span style="font-size:15px;"><strong> Service</strong>: {{data.service.name}}</span><br>
-        <span style="font-size:15px;"><strong><i style="width:30px;" class="fa fa-mobile fa-lg"></i></strong>: {{data.service.mobile}}</span><br>
-        <span><strong>Tentative closing date</strong>: {{data.date}}</span><br>
+        <span style="font-size:15px;"><strong> Service </strong>: {{data.service.name}}</span><br>
+        <span style="font-size:15px;"><strong>Mobile </strong>: {{data.service.mobile}}</span><br>
+        <span><strong>Closing date </strong>: {{data.date}}</span><br>
         <!-- <div ng-repeat='d in data.responsible '><strong>Responsible Person</strong>: {{d.first_name}} {{d.last_name}}</div><br> -->
       </div>
       <!-- <i style="width:30px;" class="fa fa-mobile fa-lg"></i>
@@ -24,8 +24,8 @@
             </span>
           </div>
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('invoiceDetails')">
-              <span><i class="fa fa-archive fa-lg" style="margin-top:15px;"></i></span>
+            <span class="pull-right" style="cursor:pointer;"  mwl-confirm title="Approve" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete')" confirm-button-type="default" cancel-button-type="default"></i>
+              <i class="fa fa-trash fa-lg" style="margin-top:15px;"></i>
             </span>
           </div>
           <div class="row">
