--- a/support/static/ngTemplates/app.projects.approval.success.html
+++ b/support/static/ngTemplates/app.projects.approval.success.html
@@ -1,4 +1,4 @@
-<div class="col-md-4" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.approval">
+<div class="col-md-4" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.approval.success">
   <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);">
     <div class="row text-center" style="border-bottom: 1px solid #dedede;background-color:rgb(51, 122, 183);color:white;height:6vh;">
       <div class="col-md-12" style="position:relative;display:block;">
@@ -19,7 +19,7 @@
       <div class="col-md-2">
         <div style="padding-right:20px;">
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('bom')">
+            <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('success')">
               <i class="fa fa-info-circle fa-lg" style="margin-top:15px;"></i>
             </span>
           </div>
