--- a/support/static/ngTemplates/app.projects.approval.success.html
+++ b/support/static/ngTemplates/app.projects.approval.success.html
@@ -1,5 +1,5 @@
 <div class="col-md-4" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.approval.success">
-  <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);">
+  <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);" ng-click="rowActionClicked('success')">
     <div class="row text-center" style="border-bottom: 1px solid #dedede;background-color:rgb(51, 122, 183);color:white;height:6vh;">
       <div class="col-md-12" style="position:relative;display:block;">
         <div class="row" style="padding-left:10px;">
@@ -16,7 +16,7 @@
       </div>
       <!-- <i style="width:30px;" class="fa fa-mobile fa-lg"></i>
       <i style="width:30px;" class="fa fa-envelope "></i> -->
-      <div class="col-md-2">
+      <!-- <div class="col-md-2">
         <div style="padding-right:20px;">
           <div class="row">
             <span class="pull-right" style="cursor:pointer;" ng-click="rowActionClicked('success')">
@@ -24,7 +24,7 @@
             </span>
           </div>
         </div>
-      </div>
+      </div> -->
     </div>
   </div>
 </div>
