--- a/support/static/ngTemplates/app.projects.form.html
+++ b/support/static/ngTemplates/app.projects.form.html
@@ -37,6 +37,18 @@
         </span>
       </div>
     </div>
+    <div class="form-group">
+      <label>Machine Model</label>
+      <input ng-model="form.machinemodel" type="text" class="form-control" placeholder="Machine Model">
+    </div>
+    <div class="form-group">
+      <label>Comm Nr</label>
+      <input ng-model="form.comm_nr" type="text" class="form-control" placeholder="Comm Nr">
+    </div>
+    <div class="form-group">
+      <label>Customer Ref</label>
+      <input ng-model="form.customer_ref " type="text" class="form-control" placeholder="Customer Ref">
+    </div>
 
     <div class="btn-group pull-right">
       <button ng-if="mode=='new'" type="button" class="btn btn-default" ng-click="resetForm()">
