--- a/homepage/static/ngTemplates/app.homepage.blogs.html
+++ b/homepage/static/ngTemplates/app.homepage.blogs.html
@@ -92,13 +92,13 @@
     </div>
   </div>
 
-  <div class="buttons">
+  <div class="prevNextBtn">
 
-    <div class="prevNextBtn" ng-click="prevBtn()">
+    <div ng-click="prevBtn()">
       Previous
     </div>
 
-    <div class="prevNextBtn" ng-click="nextBtn()">
+    <div ng-click="nextBtn()">
       Next
     </div>
 
