added 2 new files

--- a/homepage/static/ngTemplates/app.homepage.industry.html
+++ b/homepage/static/ngTemplates/app.homepage.industry.html
@@ -15,7 +15,7 @@
   </div>
   <div class="col-md-10 col-md-offset-2">
     <div class="row">
-      <a href="" class="col-md-3 col-xs-12 col-sm-3 text-center list">
+      <a href="/bpo" class="col-md-3 col-xs-12 col-sm-3 text-center list">
         BPO
       </a>
       <a href="" class="col-md-3 col-xs-12 col-sm-3 text-center list">
