--- a/support/static/ngTemplates/app.timesheet.explore.html
+++ b/support/static/ngTemplates/app.timesheet.explore.html
@@ -27,30 +27,20 @@
 
 
   <div class="row">
-    <div class="col-md-4" style="margin-bottom:20px; padding-left:10px;padding-right:10px;" ng-repeat="data in fullInfo">
+    <div class="col-md-4" style="padding-left:10px;padding-right:10px;" ng-repeat="data in fullInfo">
       <!-- {{data[0].numOfComments}} {{data[0].statusChat}} -->
       <div class="container-fluid card" style="padding-bottom:0px">
-        <div class="row container-fluid" style="border-bottom: 1px solid #dedede; height:170px; opacity:0.9;letter-spacing:0.6px; {{data[0].user_id==null ? 'background-color: #fc000033':''}}; {{data[0].statusChat=='closed'?'background-color: #16e61133':'' }}">
+        <div class="row container-fluid" style="height:170px; opacity:0.9;letter-spacing:0.6px; {{data[0].user_id==null ? 'background-color: #fc000033':''}}; {{data[0].statusChat=='closed'?'background-color: #16e61133':'' }}">
           <div class="col-md-12">
             <!-- {{data[0]}} <br> -->
-            <h5 style="font-weight:501">Agent Name : {{data[0].user_id | getName}}
-
-            </h5>
+            <h5 style="font-weight:501">Agent Name : {{data[0].user_id | getName}}</h5>
+            <span class="pull-right">Date: {{data[0].created}}</span>
             <h5>Total Heartbeats:{{data.length}}</h5>
             <div ng-repeat="val in data">
               <span><b>Start</b>:{{val.start|getTime}}</span>
                <span class="pull-right"><b>End</b>: {{val.end|getTime}}</span>
             </div>
-
           </div>
-        </div>
-        <div class="row container-fluid" style="padding-top:10px;height:50px;background-color:#286090; opacity:1">
-          <div class="col-md-12" style="color:#fff">
-            <h5>Date: {{data[0].created}}
-              <!-- <span class="pull-right" style="cursor:pointer;"><i class="fa fa-info-circle fa-lg" ng-click="tableAction($index)"></i></span> -->
-            </h5>
-          </div>
-        </div>
       </div>
     </div>
 
