--- a/PIM/static/ngTemplates/app.home.dashboard.html
+++ b/PIM/static/ngTemplates/app.home.dashboard.html
@@ -141,7 +141,7 @@
                 <h4>Average Response Time(ART) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
               </div>
               <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-asc fa-lg" style="color:#e85c30"></i> &nbsp;38.21%</h4>
+                <h4><i class="fa fa-sort-{{chaneInAvgResponseTime.increase?'asc':'desc' }} fa-lg" style="color:{{chaneInAvgResponseTime.increase?'#bcd46e':'#c43f3f'}} "></i> &nbsp;{{chaneInAvgResponseTime.percentage}}%</h4>
               </div>
             </div>
             <div class="row">
@@ -158,7 +158,7 @@
                 <h4>Average First Response Time(AFRT) &nbsp; <i class="fa fa-info-circle" style="color:#4a4641"></i></h4>
               </div>
               <div class="col-md-6 text-right">
-                <h4><i class="fa fa-sort-desc fa-lg" style="color:#bcd46e"></i> &nbsp;27.75%</h4>
+                <h4><i class="fa fa-sort-{{chaneInAvgFTResponseTime.increase?'asc':'desc' }} fa-lg" style="color:{{chaneInAvgFTResponseTime.increase?'#bcd46e':'#c43f3f'}} "></i> &nbsp;{{chaneInAvgFTResponseTime.percentage}}%</h4>
               </div>
             </div>
             <div class="row">
