--- a/support/static/ngTemplates/app.projects.success.view.html
+++ b/support/static/ngTemplates/app.projects.success.view.html
@@ -31,8 +31,8 @@
           <div class="col-md-5 text-right">
             <label><h4> Responsible Person :  </h4> </label> <br>
           </div>
-          <div class="col-md-7">
-            <h4>{{name}}</h4> <br>
+          <div class="col-md-7" >
+            <h4 ng-repeat = "item in name"><span>{{item}}</span></h4> <br>
           </div>
         </div>
         </div>
@@ -47,14 +47,16 @@
             <th>Part No</th>
             <th>Quantity</th>
             <th>Price</th>
+            <th>Quantity Received</th>
             <th>Total</th>
            </tr>
             <tr ng-repeat="v in projects track by $index">
               <td>{{$index + 1}}</td>
               <td>{{v.products.description_1}}</td>
               <td>{{v.products.part_no}}</td>
-              <td>{{v.quantity2}}</td>
+              <td>{{v.quantity1}}</td>
               <td >{{v.price}}</td>
+              <td ><input type="number"  step=1 class="form-control-pos" ng-init="v.quantity1" ng-model="v.quantity2"></td>
               <td >{{v.price*v.quantity2}}</td>
             </tr>
             <tr>
@@ -62,8 +64,9 @@
               <td></td>
               <td></td>
               <td></td>
+              <td></td>
               <td>Total</td>
-              <td ng-model="total"><b>{{total}}</b</td>
+              <td ><b>{{total}}</b</td>
               </tr>
 
 
